@@ -48,7 +48,7 @@ see https://www.gnu.org/licenses/.  */
  * add_mssaaaa is like longlong.h's add_ssaaaa, but also generates
  * carry out, in the form of a mask. */
 
-#if defined (__GNUC__)
+#if defined (__GNUC__) && ! defined (NO_ASM)
 
 #if HAVE_HOST_CPU_FAMILY_x86 && W_TYPE_SIZE == 32
 #define add_mssaaaa(m, s1, s0, a1, a0, b1, b0)				\
